# pgtest011

./: .dockerignore  .env.example  .gitignore  .plan  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html
e2e/: playwright.config.ts  todomvc.spec.ts
migrations/: 0001_create_todos.sql
src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src/components/: error_banner.rs  new_todo.rs  todo_app.rs  todo_footer.rs  todo_item.rs
src/models/: todo.rs
src/repo/: todo_repo.rs
src/routes/: health.rs  todos.rs
src/server_fns/: todo_fns.rs
style/: main.scss
tests/: api_todos.rs  repo_todo.rs
