[package]
name = "pgtest011"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
dotenvy = { version = "0.15", optional = true }
leptos = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "macros", "chrono", "uuid", "migrate", "tls-rustls-ring-webpki"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["ssr"]
hydrate = [
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen",
  "leptos/hydrate",
]
ssr = [
  "dep:axum",
  "dep:dotenvy",
  "dep:leptos_axum",
  "dep:sqlx",
  "dep:tokio",
  "dep:tracing",
  "dep:tracing-subscriber",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "pgtest011"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
site-addr = "0.0.0.0:8080"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
